// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettingsView renders and matches the snapshot 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c11 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c26 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  cursor: default;
}

.c35 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c36 {
  background: #eaeaef;
}

.c45 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c49 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c52 {
  padding-right: 12px;
  padding-left: 12px;
}

.c55 {
  overflow: hidden;
  width: 100%;
}

.c56 {
  padding-left: 12px;
}

.c58 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-width: 0;
  border-color: #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c64 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  width: 100%;
  cursor: pointer;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c16 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c30 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c34 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c38 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c57 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c46 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c50 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c59 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c65 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c62 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c66 {
  height: 2rem;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c66[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c66[aria-disabled='true'] .c9 {
  color: #666687;
}

.c66[aria-disabled='true'] svg > g,.c66[aria-disabled='true'] svg path {
  fill: #666687;
}

.c66[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c66[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c66[aria-disabled='true']:active svg > g,.c66[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c66:hover {
  background-color: #ffffff;
}

.c66:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c66:active .c9 {
  color: #4945ff;
}

.c66:active svg > g,
.c66:active svg path {
  fill: #4945ff;
}

.c66 .c9 {
  color: #271fe0;
}

.c66 svg > g,
.c66 svg path {
  fill: #271fe0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28[aria-disabled='true'] {
  color: #666687;
}

.c28:focus-visible {
  outline: none;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c33 > svg {
  width: 0.375rem;
}

.c33 > svg > path {
  fill: #666687;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c67[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c37 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c47 {
  grid-column: span 6;
  max-width: 100%;
}

.c60 svg > g,
.c60 svg path {
  fill: #8e8ea9;
}

.c60:hover svg > g,
.c60:hover svg path {
  fill: #666687;
}

.c60:active svg > g,
.c60:active svg path {
  fill: #a5a5ba;
}

.c60[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c39 {
  background: #4945ff;
  padding-top: 8px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c44 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c40 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c41 {
  position: relative;
  outline: none;
}

.c41 > svg {
  height: 12px;
  width: 12px;
}

.c41 > svg > g,
.c41 > svg path {
  fill: #ffffff;
}

.c41[aria-disabled='true'] {
  pointer-events: none;
}

.c41:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c41:focus-visible {
  outline: none;
}

.c41:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c42 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c42[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true'] .c4 {
  color: #666687;
}

.c42[aria-disabled='true'] svg > g,.c42[aria-disabled='true'] svg path {
  fill: #666687;
}

.c42[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true']:active .c4 {
  color: #666687;
}

.c42[aria-disabled='true']:active svg > g,.c42[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c42:hover {
  background-color: #ffffff;
}

.c42:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c42:active .c4 {
  color: #4945ff;
}

.c42:active svg > g,
.c42:active svg path {
  fill: #4945ff;
}

.c42 .c4 {
  color: #271fe0;
}

.c42 svg > g,
.c42 svg path {
  fill: #271fe0;
}

.c61 {
  background-color: transparent;
}

.c61 path {
  fill: #666687;
}

.c48 {
  position: relative;
  padding-right: 4px;
}

.c63 {
  position: relative;
  padding-left: 4px;
}

.c54 {
  height: 0.75rem;
  width: 0.75rem;
}

.c54 path {
  fill: #666687;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c53 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c47 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c47 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4 c5"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c11 c12 c13 c14"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c9 c15"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c9 c16"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <h2
              class="c9 c20"
            >
              Settings
            </h2>
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <div
                      class="c23"
                    >
                      <label
                        class="c9 c24 c25"
                        for="1"
                      >
                        Entry title
                      </label>
                      <div
                        aria-autocomplete="none"
                        aria-controls="radix-0"
                        aria-describedby="1-hint 1-error"
                        aria-expanded="false"
                        aria-label="Entry title"
                        class="c26 c27 c28"
                        data-state="closed"
                        dir="ltr"
                        id="1"
                        overflow="hidden"
                        role="combobox"
                        tabindex="0"
                      >
                        <span
                          class="c29"
                        >
                          <span
                            class="c9 c30"
                          >
                            <span
                              class="c31"
                            >
                              postal_code
                            </span>
                          </span>
                        </span>
                        <span
                          class="c32"
                        >
                          <span
                            aria-hidden="true"
                            class="c33"
                          >
                            <svg
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <p
                        class="c9 c34"
                        id="1-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c35"
            >
              <hr
                class="c36 c37"
              />
            </div>
            <h3
              class="c9 c20"
            >
              View
            </h3>
            <div
              class="c19"
            >
              <div
                class="c6"
              >
                <div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c38"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c34"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c39 c40 c41 c42"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                  >
                    <div
                      aria-hidden="true"
                      class="c43"
                    >
                      <svg
                        fill="none"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c4 c44"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c45"
              >
                <div
                  class="c46"
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c47"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c48"
                        >
                          <div
                            class="c49 c50 c51"
                          >
                            <span
                              class="c52 c8 c53"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c54"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c55"
                              overflow="hidden"
                            >
                              <div
                                class="c56 c6"
                              >
                                <span
                                  class="c9 c57"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="2"
                                      class="c58 c59 c13 c60 c61"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="3"
                                      class="c58 c59 c13 c60 c61"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c47"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c63"
                        >
                          <div
                            class="c49 c50 c51"
                          >
                            <span
                              class="c52 c8 c53"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c54"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c55"
                              overflow="hidden"
                            >
                              <div
                                class="c56 c6"
                              >
                                <span
                                  class="c9 c57"
                                >
                                  city
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="4"
                                      class="c58 c59 c13 c60 c61"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="5"
                                      class="c58 c59 c13 c60 c61"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c64 c65 c13 c66"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class=""
                      >
                        <svg
                          fill="none"
                          height="1rem"
                          viewBox="0 0 24 24"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c9 c15"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c62"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`EditSettingsView should add field 1`] = `
.c1 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c2 {
  padding-bottom: 8px;
}

.c7 {
  min-width: 0;
}

.c11 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  cursor: pointer;
}

.c17 {
  padding-right: 56px;
  padding-left: 56px;
}

.c18 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c26 {
  background: #ffffff;
  padding-right: 12px;
  padding-left: 12px;
  border-radius: 4px;
  position: relative;
  overflow: hidden;
  cursor: default;
}

.c35 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c36 {
  background: #eaeaef;
}

.c45 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c49 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c52 {
  padding-right: 12px;
  padding-left: 12px;
}

.c55 {
  overflow: hidden;
  width: 100%;
}

.c56 {
  padding-left: 12px;
}

.c58 {
  background: #ffffff;
  padding: 8px;
  border-radius: 4px;
  border-width: 0;
  border-color: #dcdce4;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}

.c64 {
  background: #4945ff;
  padding: 8px;
  padding-right: 16px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
  width: 100%;
  cursor: pointer;
}

.c10 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c15 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c16 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c20 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c24 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c30 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c34 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c38 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c57 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c23 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c29 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 16px;
}

.c32 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 12px;
}

.c46 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c50 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c59 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c65 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  position: relative;
  outline: none;
}

.c13 > svg {
  height: 12px;
  width: 12px;
}

.c13 > svg > g,
.c13 > svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c62 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c14 {
  height: 2rem;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c9 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c66 {
  height: 2rem;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c66[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c66[aria-disabled='true'] .c9 {
  color: #666687;
}

.c66[aria-disabled='true'] svg > g,.c66[aria-disabled='true'] svg path {
  fill: #666687;
}

.c66[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c66[aria-disabled='true']:active .c9 {
  color: #666687;
}

.c66[aria-disabled='true']:active svg > g,.c66[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c66:hover {
  background-color: #ffffff;
}

.c66:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c66:active .c9 {
  color: #4945ff;
}

.c66:active svg > g,
.c66:active svg path {
  fill: #4945ff;
}

.c66 .c9 {
  color: #271fe0;
}

.c66 svg > g,
.c66 svg path {
  fill: #271fe0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c28 {
  border: 1px solid #dcdce4;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28[aria-disabled='true'] {
  color: #666687;
}

.c28:focus-visible {
  outline: none;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c33 > svg {
  width: 0.375rem;
}

.c33 > svg > path {
  fill: #666687;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c67[data-state='checked'] .c9 {
  font-weight: bold;
  color: #4945ff;
}

.c37 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c21 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c22 {
  grid-column: span 6;
  max-width: 100%;
}

.c47 {
  grid-column: span 6;
  max-width: 100%;
}

.c60 svg > g,
.c60 svg path {
  fill: #8e8ea9;
}

.c60:hover svg > g,
.c60:hover svg path {
  fill: #666687;
}

.c60:active svg > g,
.c60:active svg path {
  fill: #a5a5ba;
}

.c60[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c39 {
  background: #4945ff;
  padding-top: 8px;
  padding-right: 16px;
  padding-bottom: 8px;
  padding-left: 16px;
  border-radius: 4px;
  border-color: #4945ff;
  border: 1px solid #4945ff;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c44 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #ffffff;
}

.c40 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.c43 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  gap: 8px;
  position: relative;
  outline: none;
}

.c3 svg {
  font-size: 0.625rem;
}

.c3 svg path {
  fill: #4945ff;
}

.c3:hover {
  color: #7b79ff;
}

.c3:active {
  color: #271fe0;
}

.c3:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c3:focus-visible {
  outline: none;
}

.c3:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c41 {
  position: relative;
  outline: none;
}

.c41 > svg {
  height: 12px;
  width: 12px;
}

.c41 > svg > g,
.c41 > svg path {
  fill: #ffffff;
}

.c41[aria-disabled='true'] {
  pointer-events: none;
}

.c41:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c41:focus-visible {
  outline: none;
}

.c41:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c42 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
}

.c42[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true'] .c4 {
  color: #666687;
}

.c42[aria-disabled='true'] svg > g,.c42[aria-disabled='true'] svg path {
  fill: #666687;
}

.c42[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true']:active .c4 {
  color: #666687;
}

.c42[aria-disabled='true']:active svg > g,.c42[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c42:hover {
  background-color: #ffffff;
}

.c42:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c42:active .c4 {
  color: #4945ff;
}

.c42:active svg > g,
.c42:active svg path {
  fill: #4945ff;
}

.c42 .c4 {
  color: #271fe0;
}

.c42 svg > g,
.c42 svg path {
  fill: #271fe0;
}

.c61 {
  background-color: transparent;
}

.c61 path {
  fill: #666687;
}

.c48 {
  position: relative;
  padding-right: 4px;
}

.c63 {
  position: relative;
  padding-left: 4px;
}

.c54 {
  height: 0.75rem;
  width: 0.75rem;
}

.c54 path {
  fill: #666687;
}

.c51 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c53 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c22 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c22 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c47 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c47 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1"
          data-strapi-header="true"
        >
          <div
            class="c2"
          >
            <a
              aria-current="page"
              class="c3 active"
              href="/"
            >
              <svg
                fill="none"
                height="1rem"
                viewBox="0 0 24 24"
                width="1rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 13.3a.2.2 0 0 1-.2.2H5.74l8.239 8.239a.2.2 0 0 1 0 .282L12.14 23.86a.2.2 0 0 1-.282 0L.14 12.14a.2.2 0 0 1 0-.282L11.86.14a.2.2 0 0 1 .282 0L13.98 1.98a.2.2 0 0 1 0 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6Z"
                  fill="#212134"
                />
              </svg>
              <span
                class="c4 c5"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c6"
          >
            <div
              class="c7 c8"
            >
              <h1
                class="c9 c10"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c11 c12 c13 c14"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class=""
              >
                <svg
                  fill="none"
                  height="1rem"
                  viewBox="0 0 24 24"
                  width="1rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 0 1 .286 0l2.85 2.89a.2.2 0 0 1 0 .28L9.554 20.854a.2.2 0 0 1-.285 0l-9.13-9.243a.2.2 0 0 1 0-.281l2.85-2.892a.2.2 0 0 1 .284 0l6.14 6.209L20.726 2.97Z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c9 c15"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c9 c16"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c17"
      >
        <div
          class="c18"
        >
          <div
            class="c19"
          >
            <h2
              class="c9 c20"
            >
              Settings
            </h2>
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <div
                      class="c23"
                    >
                      <label
                        class="c9 c24 c25"
                        for="12"
                      >
                        Entry title
                      </label>
                      <div
                        aria-autocomplete="none"
                        aria-controls="radix-3"
                        aria-describedby="12-hint 12-error"
                        aria-expanded="false"
                        aria-label="Entry title"
                        class="c26 c27 c28"
                        data-state="closed"
                        dir="ltr"
                        id="12"
                        overflow="hidden"
                        role="combobox"
                        tabindex="0"
                      >
                        <span
                          class="c29"
                        >
                          <span
                            class="c9 c30"
                          >
                            <span
                              class="c31"
                            >
                              postal_code
                            </span>
                          </span>
                        </span>
                        <span
                          class="c32"
                        >
                          <span
                            aria-hidden="true"
                            class="c33"
                          >
                            <svg
                              fill="none"
                              height="1rem"
                              viewBox="0 0 14 8"
                              width="1rem"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M14 .889a.86.86 0 0 1-.26.625L7.615 7.736A.834.834 0 0 1 7 8a.834.834 0 0 1-.615-.264L.26 1.514A.861.861 0 0 1 0 .889c0-.24.087-.45.26-.625A.834.834 0 0 1 .875 0h12.25c.237 0 .442.088.615.264a.86.86 0 0 1 .26.625Z"
                                fill="#32324D"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <p
                        class="c9 c34"
                        id="12-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c35"
            >
              <hr
                class="c36 c37"
              />
            </div>
            <h3
              class="c9 c20"
            >
              View
            </h3>
            <div
              class="c19"
            >
              <div
                class="c6"
              >
                <div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c38"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class=""
                  >
                    <span
                      class="c9 c34"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c39 c40 c41 c42"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                  >
                    <div
                      aria-hidden="true"
                      class="c43"
                    >
                      <svg
                        fill="none"
                        height="1rem"
                        viewBox="0 0 24 24"
                        width="1rem"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c4 c44"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c45"
              >
                <div
                  class="c46"
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c47"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c48"
                        >
                          <div
                            class="c49 c50 c51"
                          >
                            <span
                              class="c52 c8 c53"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c54"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c55"
                              overflow="hidden"
                            >
                              <div
                                class="c56 c6"
                              >
                                <span
                                  class="c9 c57"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="13"
                                      class="c58 c59 c13 c60 c61"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="14"
                                      class="c58 c59 c13 c60 c61"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c47"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="c8 c63"
                        >
                          <div
                            class="c49 c50 c51"
                          >
                            <span
                              class="c52 c8 c53"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c54"
                                fill="none"
                                height="1rem"
                                viewBox="0 0 24 24"
                                width="1rem"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574A1.943 1.943 0 0 1 14.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 0 1 1.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0 0 17.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM16.563 14.372a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005ZM16.563 23.392a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 0 1-2.184-.574 1.943 1.943 0 0 1-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 0 0-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006ZM7.378 5.622a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005ZM7.378 14.406a2.503 2.503 0 1 0 0-5.006 2.503 2.503 0 0 0 0 5.006Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 0 1 1.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 0 0 8.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006ZM7.378 23.427a2.503 2.503 0 1 0 0-5.007 2.503 2.503 0 0 0 0 5.007Z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 0 1-2.185-.574 1.943 1.943 0 0 1-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 0 0 8.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0Z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c55"
                              overflow="hidden"
                            >
                              <div
                                class="c56 c6"
                              >
                                <span
                                  class="c9 c57"
                                >
                                  city
                                </span>
                                <div
                                  class="c8"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="15"
                                      class="c58 c59 c13 c60 c61"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 0 1 1.887 0l3.118 3.118ZM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0Z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="16"
                                      class="c58 c59 c13 c60 c61"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c62"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1rem"
                                        viewBox="0 0 24 24"
                                        width="1rem"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 0 0-.197.233L6 24h12l2.96-17.618a.2.2 0 0 0-.196-.233H3.236ZM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 0 1-.2.2H2.2a.2.2 0 0 1-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8Z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c64 c65 c13 c66"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class=""
                      >
                        <svg
                          fill="none"
                          height="1rem"
                          viewBox="0 0 24 24"
                          width="1rem"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 0 1-.3.3h-9.795V23.7a.3.3 0 0 1-.3.3h-3.21a.3.3 0 0 1-.3-.3v-9.795H.3a.3.3 0 0 1-.3-.3v-3.21a.3.3 0 0 1 .3-.3h9.795V.3a.3.3 0 0 1 .3-.3h3.21a.3.3 0 0 1 .3.3v9.795H23.7a.3.3 0 0 1 .3.3v3.21Z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c9 c15"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c62"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
